# alarkhabil-server

./: Cargo.toml  README.md  example.env
src/: base64.rs  error_reporting.rs  lib.rs  limits.rs  main.rs  markdown.rs  state.rs  sys_time.rs
src/api/v1/: account_change_credentials.rs  account_check_credentials.rs  account_delete.rs  account_new.rs  admin_author_delete.rs  admin_channel_delete.rs  admin_meta_delete.rs  admin_meta_update.rs  admin_post_delete.rs  author_channels.rs  author_info.rs  author_list.rs  author_posts.rs  channel_authors.rs  channel_delete.rs  channel_info.rs  channel_list.rs  channel_new.rs  channel_posts.rs  channel_update.rs  invite_new.rs  meta_info.rs  meta_list.rs  mod.rs  post_delete.rs  post_info.rs  post_list.rs  post_new.rs  post_update.rs  self_update.rs  tag_list.rs  tag_posts.rs
src/api/v1/types/: author.rs  channel.rs  invite.rs  mod.rs  post.rs
src/crypto/: mod.rs  private_key.rs  signed_message.rs
src/db/: mod.rs
src/sql/: schema-sqlite.sql
