[package]
name = "alarkhabil-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "*", features = ["bundled"] }
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
ed25519-dalek = "2"
curve25519-dalek = "4"
base64 = "0.21.4"
futures = "0.3.28"
axum = "0.6.20"
tower = "0.4.13"
digest = "*"
generic-array = "*"
uuid = { version = "1.5", features = ["v4"] }
